--- a/.github/workflows/auto-label-issues.yml
+++ b/.github/workflows/auto-label-issues.yml
@@ -20,9 +20,8 @@ jobs:
             const body = issue.body || '';
             const title = issue.title || '';
             
-            // Parse component from issue body
-            const componentMatch = body.match(/###\s*📂 Affected Component\s*\n\s*(.+)/i) ||
-                                   body.match(/###\s*🔧 (?:WTM|Infeed) Component\s*\n\s*(.+)/i);
+            // Parse component from issue body (updated regex without emoji)
+            const componentMatch = body.match(/###\s*Affected Component\s*\n\s*(.+)/i);
             
             if (componentMatch) {
               const component = componentMatch[1].trim().toLowerCase()
@@ -38,8 +37,32 @@ jobs:
               });
             }
             
-            // Parse priority
-            const priorityMatch = body.match(/###\s*🚨 Priority\s*\n\s*(P[0-3])/i);
+            // Parse issue category
+            const categoryMatch = body.match(/###\s*Issue Category\s*\n\s*(.+)/i);
+            if (categoryMatch) {
+              const category = categoryMatch[1].trim().toLowerCase();
+              await github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: issue.number,
+                labels: [`category:${category}`]
+              });
+            }
+            
+            // Parse clarity
+            const clarityMatch = body.match(/###\s*Clarity of the Issue\s*\n\s*(.+)/i);
+            if (clarityMatch) {
+              const clarity = clarityMatch[1].trim().toLowerCase();
+              await github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: issue.number,
+                labels: [`clarity:${clarity}`]
+              });
+            }
+            
+            // Parse priority (updated regex without emoji)
+            const priorityMatch = body.match(/###\s*Priority\s*\n\s*(P[0-3])/i);
             if (priorityMatch) {
               const priority = priorityMatch[1].toLowerCase();
               await github.rest.issues.addLabels({
@@ -50,8 +73,8 @@ jobs:
               });
             }
             
-            // Parse bot operational status for robot issues
-            const botStatusMatch = body.match(/###\s*🚦 Bot Operational Status\s*\n\s*(.+)/i);
+            // Parse bot operational status (updated regex without emoji)
+            const botStatusMatch = body.match(/###\s*Bot Operational Status\s*\n\s*(.+)/i);
             if (botStatusMatch) {
               const status = botStatusMatch[1].trim().toLowerCase();
               if (status.includes('down')) {
@@ -69,39 +92,6 @@ jobs:
                   labels: ['bot-degraded']
                 });
               }
-            }
-
-            // --- New: detect the issue template used and add 'robot-issue' label when 01-robot-issue was used ---
-            // Common GitHub behaviour: when an issue template is used, GitHub inserts a hidden HTML comment like:
-            // <!-- template: 01-robot-issue.yml -->
-            // Check for that comment first. Fallback: look for the template filename anywhere in the body.
-            try {
-              const templateCommentMatch = body.match(/<!--\s*template:\s*([^\s>]+)\s*-->/i);
-              const templateFilenameMatch = body.match(/01-robot-issue(?:\.ya?ml)?/i);
-
-              let isRobotTemplate = false;
-
-              if (templateCommentMatch) {
-                const templateUsed = templateCommentMatch[1].trim().toLowerCase();
-                if (templateUsed === '01-robot-issue.yml' || templateUsed === '01-robot-issue') {
-                  isRobotTemplate = true;
-                }
-              } else if (templateFilenameMatch) {
-                // fallback: template filename appears in the body
-                isRobotTemplate = true;
-              }
-
-              if (isRobotTemplate) {
-                await github.rest.issues.addLabels({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  labels: ['robot-issue']
-                });
-              }
-            } catch (err) {
-              // Safe fail: log and continue with other labeling
-              console.log('Template detection failed:', err);
             }
             
             console.log('Auto-labeling completed');
