--- a/.github/ISSUE_TEMPLATE/03-infeed-issue.yml
+++ b/.github/ISSUE_TEMPLATE/03-infeed-issue.yml
@@ -1,4 +1,4 @@
-name: 📥 Report Infeed Issue
+name: Report Infeed Issue
 description: Report problems with infeed system or material flow
 title: "[Infeed] Short issue description"
 labels: [bug, infeed-issue, status:open]
@@ -8,131 +8,136 @@ body:
   - type: markdown
     attributes:
       value: |
-        ## 📥 Infeed Issue Report
-        Report issues with item feeding, detection, or material flow into the sortation system.
+        ## Infeed Issue Report
+        Please fill out this form completely for infeed system issues.
 
   - type: dropdown
-    id: infeed_component
+    id: component
     attributes:
-      label: 🔧 Infeed Component
-      description: Select the affected component
+      label: Affected Component
+      description: Select the affected infeed component
       options:
-        - Conveyor Belt/Motor
-        - Item Detection Sensors
-        - Barcode Scanner
-        - Sorting Gate/Diverter
-        - Alignment Mechanism
-        - Speed Control
-        - Emergency Stop System
-        - Wiring/Connectors
-        - Controller/Interface
-        - Other
-    validations:
-      required: true
-
-  - type: input
-    id: infeed_location
-    attributes:
-      label: 📍 Infeed Line/Location
-      description: Specific infeed line or station ID
-      placeholder: "e.g., Infeed-1, Line A, Station 5"
+        - Motherboard
+        - Conveyor Motor
+        - Motor Driver
+        - Clit Sensor
+        - Packet Transfer Sensor
+        - Curtain Sensor
+        - Tower Lamp
+        - Router
+        - Power Supply
+        - Scanner
+        - Mechanical Assembly
+        - Conveyor Belt
+        - Control Panel
+        - Others
     validations:
       required: true
 
   - type: dropdown
-    id: issue_type
+    id: issue_category
     attributes:
-      label: 📦 Issue Type
+      label: Issue Category
+      description: Primary category of the issue
       options:
-        - Item jam/blockage
-        - Missed item detection
-        - Scanner read failure
-        - Incorrect item routing
-        - Belt stoppage
-        - Speed issues (too fast/slow)
-        - Sensor misalignment
-        - Multiple items detected as one
-        - E-stop triggered
-        - Other
+        - Mechanical
+        - Electronics
+        - Embedded
+        - Software
+    validations:
+      required: true
+
+  - type: dropdown
+    id: component_status
+    attributes:
+      label: Component Status
+      description: Current state of the affected component
+      options:
+        - Non-functional (completely down)
+        - Intermittent (works sometimes)
+        - Degraded (reduced performance)
+        - Error state (shows errors but working)
     validations:
       required: true
 
   - type: textarea
     id: issue_description
     attributes:
-      label: 📝 Issue Description
-      description: Describe the infeed problem
-      placeholder: "Describe what's happening, symptoms, error conditions"
+      label: Issue Description
+      description: Clearly describe the problem observed
+      placeholder: "Describe symptoms, error messages, material flow issues, etc."
+    validations:
+      required: true
+
+  - type: dropdown
+    id: clarity
+    attributes:
+      label: Clarity of the Issue
+      description: How well-defined and reproducible is this issue?
+      options:
+        - Poor
+        - Good
+        - Excellent
     validations:
       required: true
 
   - type: input
     id: issue_start_time
     attributes:
-      label: ⏰ Issue Start Time
-      description: When did this issue first occur? (YYYY-MM-DD HH:MM)
-      placeholder: "2025-11-10 14:30"
-    validations:
-      required: false
-
-  - type: dropdown
-    id: throughput_impact
-    attributes:
-      label: 📊 Throughput Impact
-      description: How does this affect item processing rate?
-      options:
-        - Complete stoppage (0% throughput)
-        - Severely reduced (>50% reduction)
-        - Moderately reduced (25-50% reduction)
-        - Slightly reduced (<25% reduction)
-        - No throughput impact (quality/accuracy issue)
-    validations:
-      required: true
-
-  - type: textarea
-    id: error_codes
-    attributes:
-      label: ⚠️ Error Codes/Messages
-      description: Any error codes or alarm messages displayed
-      placeholder: "List error codes, alarm messages, or system notifications"
+      label: Issue Start Time
+      description: When did this issue first occur? (YYYY-MM-DD HH:MM format)
+      placeholder: "2025-11-12 14:30"
     validations:
       required: false
 
   - type: textarea
-    id: affected_items
+    id: steps_to_reproduce
     attributes:
-      label: 📦 Affected Item Details
-      description: Item types, sizes, or characteristics related to the issue
-      placeholder: "e.g., Only large items, items with damaged barcodes, all item types"
+      label: Steps to Reproduce
+      description: How can this issue be reproduced?
+      placeholder: |
+        1. Start conveyor belt
+        2. Place item on infeed
+        3. Observe sensor failure
+    validations:
+      required: false
+
+  - type: input
+    id: code_release_id
+    attributes:
+      label: Code Release ID
+      description: Firmware/software version running on the system
+      placeholder: "11_Release_1701_17JUN25"
     validations:
       required: false
 
   - type: textarea
-    id: media_logs
+    id: error_logs
     attributes:
-      label: 📜 Logs / Media
-      description: Attach photos of jams, videos, sensor logs, or error logs
-      placeholder: "Drag and drop images/videos or paste log data"
+      label: Error Logs / Screenshots
+      description: Paste error logs, sensor data, or attach screenshots
+      placeholder: "Paste logs here or drag and drop images"
     validations:
       required: false
 
   - type: dropdown
     id: priority
     attributes:
-      label: 🚨 Priority
+      label: Priority
+      description: Severity of this issue
       options:
-        - P0 - Critical (Line Down, no items flowing)
-        - P1 - High (Major throughput impact)
-        - P2 - Medium (Partial impact, workaround exists)
-        - P3 - Low (Monitoring, preventive maintenance)
+        - P0 - Critical (System Down, blocking operations)
+        - P1 - High (Major impact, workaround available)
+        - P2 - Medium (Minor impact, scheduled fix)
+        - P3 - Low (Cosmetic, no operational impact)
     validations:
       required: true
 
   - type: textarea
     id: additional_context
     attributes:
-      label: 📋 Additional Context
+      label: Additional Context
       description: Any other relevant information
-      placeholder: "Recent maintenance, item volume changes, environmental factors, etc."
+      placeholder: "Recent maintenance, environmental factors, related issues, etc."
     validations:
       required: false
