--- a/.github/workflows/auto-label-issues.yml
+++ b/.github/workflows/auto-label-issues.yml
@@ -1,8 +1,7 @@
 name: Auto-label Issues
 
 on:
-  issues:
-    types: [opened, edited]
+  workflow_dispatch:
 
 jobs:
   auto-label:
@@ -12,86 +11,80 @@ jobs:
       contents: read
 
     steps:
-      - name: Add component and status labels
+      - name: Process all issues
         uses: actions/github-script@v7
         with:
           script: |
-            const issue = context.payload.issue;
-            const body = issue.body || '';
-            const title = issue.title || '';
-            
-            // Parse component from issue body (updated regex without emoji)
-            const componentMatch = body.match(/###\s*Affected Component\s*\n\s*(.+)/i);
-            
-            if (componentMatch) {
-              const component = componentMatch[1].trim().toLowerCase()
-                .replace(/\s+/g, '-')
-                .replace(/\//g, '-')
-                .replace(/[()]/g, '');
-              
-              await github.rest.issues.addLabels({
+            // Fetch all issues (open + closed optional)
+            const issues = await github.paginate(
+              github.rest.issues.listForRepo,
+              {
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: issue.number,
-                labels: [`component:${component}`]
-              });
-            }
-            
-            // Parse issue category
-            const categoryMatch = body.match(/###\s*Issue Category\s*\n\s*(.+)/i);
-            if (categoryMatch) {
-              const category = categoryMatch[1].trim().toLowerCase();
-              await github.rest.issues.addLabels({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: issue.number,
-                labels: [`category:${category}`]
-              });
-            }
-            
-            // Parse clarity
-            const clarityMatch = body.match(/###\s*Clarity of the Issue\s*\n\s*(.+)/i);
-            if (clarityMatch) {
-              const clarity = clarityMatch[1].trim().toLowerCase();
-              await github.rest.issues.addLabels({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: issue.number,
-                labels: [`clarity:${clarity}`]
-              });
-            }
-            
-            // Parse priority (updated regex without emoji)
-            const priorityMatch = body.match(/###\s*Priority\s*\n\s*(P[0-3])/i);
-            if (priorityMatch) {
-              const priority = priorityMatch[1].toLowerCase();
-              await github.rest.issues.addLabels({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: issue.number,
-                labels: [priority]
-              });
-            }
-            
-            // Parse bot operational status (updated regex without emoji)
-            const botStatusMatch = body.match(/###\s*Bot Operational Status\s*\n\s*(.+)/i);
-            if (botStatusMatch) {
-              const status = botStatusMatch[1].trim().toLowerCase();
-              if (status.includes('down')) {
-                await github.rest.issues.addLabels({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  labels: ['bot-down']
-                });
-              } else if (status.includes('degraded')) {
-                await github.rest.issues.addLabels({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  labels: ['bot-degraded']
-                });
+                state: "all",   // or "open" if you only want open issues
+                per_page: 100
               }
+            );
+
+            console.log(`Found ${issues.length} issues to process`);
+
+            // Import your existing labeling logic as a function
+            async function applyLabels(issue) {
+
+              const body = issue.body || '';
+              const title = issue.title || '';
+
+              // ----- TITLE MAPPING -----
+              const titleLabelMap = [
+                { keyword: '[wtm]', label: 'F4_collision' },
+                { keyword: '[infeed]', label: 'F5_infeed' }
+              ];
+
+              for (const rule of titleLabelMap) {
+                if (title.toLowerCase().includes(rule.keyword.toLowerCase())) {
+                  await github.rest.issues.addLabels({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    issue_number: issue.number,
+                    labels: [rule.label]
+                  });
+                }
+              }
+
+              // ----- COMPONENT MAPPING -----
+              const componentLabelMap = {
+                'drive motor, motherboard': 'F1_bot_movement',
+                'station reader': 'F2_station_reader',
+                'diverter': 'F3_switching',
+                'wtm-issue': 'F4_collision',
+                'infeed-issue': 'F5_infeed',
+                'afc, electromagnet': 'F6_drop_off',
+                'motherboard closure': 'F7_motherboard_closure'
+              };
+
+              const compMatch = body.match(/###\s*Affected Component\s*\n\s*(.+)/i);
+              if (compMatch) {
+                const compRaw = compMatch[1].trim().toLowerCase();
+                for (const key in componentLabelMap) {
+                  if (compRaw.includes(key)) {
+                    await github.rest.issues.addLabels({
+                      owner: context.repo.owner,
+                      repo: context.repo.repo,
+                      issue_number: issue.number,
+                      labels: [componentLabelMap[key]]
+                    });
+                  }
+                }
+              }
+
+              // ----- YOUR EXISTING LABELING LOGIC HERE -----
+              // (You can paste your previous regex-based labeling logic here)
             }
-            
-            console.log('Auto-labeling completed');
+
+            // Loop through all issues and apply labeling rules
+            for (const issue of issues) {
+              console.log(`Processing Issue #${issue.number}`);
+              await applyLabels(issue);
+            }
+
+            console.log("Bulk labeling completed.");
